--- a/frontend/test.html
+++ b/frontend/test.html
@@ -14,7 +14,7 @@
   var myId = 123;
   var angle = 0;
 
-  const socket = eio('ws://localhost:1738', {path: '/engine.io/game'});
+  const socket = eio('wss://y-backend.com:1700', {path: '/engine.io/game'});
   socket.on('open', () => {
     console.log('socket opened');
     socket.send(JSON.stringify({type: 'playerjoin', id: 123, name: 'john xi-na'}));
