--- a/frontend/test.html
+++ b/frontend/test.html
@@ -17,8 +17,8 @@
   var obstacles = [{xPos: 10, yPos: 20}, {xPos: 100, yPos: 200}];
   var angle = 0;
 
-  const socket = eio('ws://localhost:1700', {path: '/engine.io/game'});
-  // const socket = eio('wss://y-backend.com:1700', {path: '/engine.io/game'});
+  //const socket = eio('ws://localhost:1700', {path: '/engine.io/game'});
+  const socket = eio('wss://y-backend.com:1700', {path: '/engine.io/game'});
   socket.on('open', () => {
     console.log('socket opened');
     socket.send(JSON.stringify({type: 'playerjoin', id: playerId, name: playerName}));
