--- a/frontend/public/game.html
+++ b/frontend/public/game.html
@@ -1,6 +1,9 @@
 <html>
 <canvas id="myCanvas" width="1024" height="768"></canvas>
-Image by rawpixel.com
+<br/>
+Clouds - Image by rawpixel.com
+<br/>
+<a target="_blank" href="https://icons8.com/icon/E3jrJhWWAvey/airplane">Airplane</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/engine.io-client/3.4.3/engine.io.min.js"></script>
 
@@ -20,13 +23,18 @@ Image by rawpixel.com
   for (var i =0 ; i < 15; i++) {
     obstacles.push({xPos: Math.floor(Math.random() * 3000) - 2000, yPos: Math.floor(Math.random() * 1000) - 500});
   }
-  cloud = new Image();
-  cloud.src = 'cloud.png';
   var angle = 0;
   var mouseDownTimeout;
 
-  //const socket = eio('ws://localhost:1700', {path: '/engine.io/game'});
-  const socket = eio('wss://y-backend.com:1700', {path: '/engine.io/game'});
+  const cloud = new Image();
+  cloud.src = 'cloud.png';
+  const airplaneWhite = new Image(32, 32);
+  airplaneWhite.src = 'airplane_white.png';
+  const airplaneBlack = new Image(32, 32);
+  airplaneBlack.src = 'airplane_black.png';
+
+  const socket = eio('ws://localhost:1700', {path: '/engine.io/game'});
+  // const socket = eio('wss://y-backend.com:1700', {path: '/engine.io/game'});
   socket.on('open', () => {
     console.log('socket opened');
     socket.send(JSON.stringify({type: 'playerjoin', id: playerId, name: playerName}));
@@ -121,22 +129,37 @@ Image by rawpixel.com
     }
 
     for (const player of gameState.players) {
+      const airplane = player.id == playerId ? airplaneBlack : airplaneWhite;
       const color = player.id == playerId ? 'green' : 'red';
-      drawCircle(ctx, player.xPos - myX + SCREEN_MIDDLE_X, player.yPos - myY + SCREEN_MIDDLE_Y, 10, color);
-      drawText(ctx, player.xPos - myX + SCREEN_MIDDLE_X, player.yPos - myY + SCREEN_MIDDLE_Y + 20, player.name, 'center', color, font='12px Arial');
-      drawHealthBar(ctx, player.xPos - myX + SCREEN_MIDDLE_X, player.yPos - myY + SCREEN_MIDDLE_Y, player.health);
+      drawAirplane(ctx, airplane, player.xPos - myX + SCREEN_MIDDLE_X, player.yPos - myY + SCREEN_MIDDLE_Y, player.angle);
+      drawText(ctx, player.xPos - myX + SCREEN_MIDDLE_X, player.yPos - myY + SCREEN_MIDDLE_Y + 30, player.name, 'center', color, font='12px Arial');
+      drawHealthBar(ctx, player.xPos - myX + SCREEN_MIDDLE_X, player.yPos - myY + SCREEN_MIDDLE_Y - 10, player.health);
     }
     for (const projectile of gameState.projectiles) {
       drawCircle(ctx, projectile.xPos - myX + SCREEN_MIDDLE_X, projectile.yPos - myY + SCREEN_MIDDLE_Y, 2, 'black');
     }
   }
 
+  function drawAirplane(ctx, image, xCenter, yCenter, angle) {
+    // ctx.clearRect(0, 0, canvas.width, canvas.height);
+    // ctx.save();
+    // ctx.translate(xCenter, yCenter);
+    // ctx.rotate(-angle * Math.PI / 180);
+    // ctx.drawImage(image, -image.width / 2, -image.height / 2);
+    // ctx.drawImage(image, xCenter - image.width / 2, yCenter - image.height / 2);
+    // ctx.restore();
+    ctx.setTransform(1, 0, 0, 1, xCenter, yCenter); // sets scale and origin
+    ctx.rotate(-angle * Math.PI / 180);
+    ctx.drawImage(image, -image.width / 2, -image.height / 2, image.width, image.height);
+    ctx.setTransform(1, 0, 0, 1, 0, 0);
+  }
+
   function drawCircle(ctx, x, y, r, color='#b8e015') {
-      ctx.beginPath();
-      ctx.arc(x, y, r, 0, Math.PI*2);
-      ctx.fillStyle = color;
-      ctx.fill();
-      ctx.closePath();
+    ctx.beginPath();
+    ctx.arc(x, y, r, 0, Math.PI*2);
+    ctx.fillStyle = color;
+    ctx.fill();
+    ctx.closePath();
   }
 
   function drawText(ctx, x, y, text, textAlign='left', color='black', font='30px Arial') {
@@ -147,17 +170,17 @@ Image by rawpixel.com
   }
 
   function drawHealthBar(ctx, x, y, health) {
-      ctx.beginPath();
-      ctx.rect(x - 75/2, y - 30, 75, 10);
-      ctx.fillStyle = "#ff1100";
-      ctx.fill();
-      ctx.closePath();
+    ctx.beginPath();
+    ctx.rect(x - 75/2, y - 30, 75, 10);
+    ctx.fillStyle = "#ff1100";
+    ctx.fill();
+    ctx.closePath();
 
-      ctx.beginPath();
-      ctx.rect(x - 75/2, y - 30, (health/4)*3, 10);
-      ctx.fillStyle = "#11ff00";
-      ctx.fill();
-      ctx.closePath();
+    ctx.beginPath();
+    ctx.rect(x - 75/2, y - 30, (health/4)*3, 10);
+    ctx.fillStyle = "#11ff00";
+    ctx.fill();
+    ctx.closePath();
   }
 
   function drawRect(ctx, x, y, width, height, color='#410765') {
