Add frontend support to display dropping med boxes.

--- a/frontend/public/game.html
+++ b/frontend/public/game.html
@@ -4,6 +4,7 @@
 Clouds - Image by rawpixel.com
 <br/>
 <a target="_blank" href="https://icons8.com/icon/E3jrJhWWAvey/airplane">Airplane</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+<a target="_blank" href="https://icons8.com/icon/eVRlPdxRxmNe/medical-box">Medical Box</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/engine.io-client/3.4.3/engine.io.min.js"></script>
 
@@ -33,6 +34,8 @@ Clouds - Image by rawpixel.com
   airplaneWhite.src = 'airplane_white.png';
   const airplaneBlack = new Image(32, 32);
   airplaneBlack.src = 'airplane_black.png';
+  const medBox = new Image(32, 32);
+  medBox.src = 'med_box.png';
 
   const socket = eio('ws://localhost:1700', {path: '/engine.io/game'});
   // const socket = eio('wss://y-backend.com:1700', {path: '/engine.io/game'});
@@ -134,6 +137,12 @@ Clouds - Image by rawpixel.com
       drawCloud(ctx, obstacle.xPos - myX + SCREEN_MIDDLE_X, obstacle.yPos - myY + SCREEN_MIDDLE_Y);
     }
 
+    for (const powerup of gameState.powerups) {
+      if (powerup.name == 'medkit') {
+        drawImage(ctx, medBox, powerup.xPos - myX + SCREEN_MIDDLE_X, powerup.yPos - myY + SCREEN_MIDDLE_Y, powerup.radius * 1.5, powerup.radius * 1.5);
+      }
+    }
+
     for (const player of gameState.players) {
       const airplane = player.id == playerId ? airplaneBlack : airplaneWhite;
       const color = player.id == playerId ? 'green' : 'red';
@@ -141,6 +150,7 @@ Clouds - Image by rawpixel.com
       drawText(ctx, player.xPos - myX + SCREEN_MIDDLE_X, player.yPos - myY + SCREEN_MIDDLE_Y + 30, player.name, 'center', color, font='12px Arial');
       drawHealthBar(ctx, player.xPos - myX + SCREEN_MIDDLE_X, player.yPos - myY + SCREEN_MIDDLE_Y - 10, player.health);
     }
+
     for (const projectile of gameState.projectiles) {
       drawCircle(ctx, projectile.xPos - myX + SCREEN_MIDDLE_X, projectile.yPos - myY + SCREEN_MIDDLE_Y, 2, 'black');
     }
@@ -155,6 +165,12 @@ Clouds - Image by rawpixel.com
     ctx.rotate(-angle * Math.PI / 180);
     ctx.drawImage(image, -image.width / 2, -image.height / 2, image.width, image.height);
     ctx.setTransform(1, 0, 0, 1, 0, 0);
+  }
+
+  function drawImage(ctx, image, xCenter, yCenter, width, height) {
+    const imgWidth = width == null ? image.width : width;
+    const imgHeight = height == null ? image.height : height;
+    ctx.drawImage(image, xCenter - image.width / 2, yCenter - image.height / 2, imgWidth, imgHeight);
   }
 
   function drawCircle(ctx, x, y, r, color='#b8e015') {
