Add bomb and rocket images and rendering.

--- a/frontend/public/game.html
+++ b/frontend/public/game.html
@@ -4,7 +4,9 @@
 Clouds - Image by rawpixel.com
 <br/>
 <a target="_blank" href="https://icons8.com/icon/E3jrJhWWAvey/airplane">Airplane</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+<a target="_blank" href="https://icons8.com/icon/iesmzwuTdYDg/bombImg">bombImg</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
 <a target="_blank" href="https://icons8.com/icon/eVRlPdxRxmNe/medical-box">Medical Box</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+<a target="_blank" href="https://icons8.com/icon/117057/missile">Missile</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/engine.io-client/3.4.3/engine.io.min.js"></script>
 
@@ -30,12 +32,16 @@ Clouds - Image by rawpixel.com
 
   const cloud = new Image();
   cloud.src = 'cloud.png';
-  const airplaneWhite = new Image(32, 32);
-  airplaneWhite.src = 'airplane_white.png';
-  const airplaneBlack = new Image(32, 32);
-  airplaneBlack.src = 'airplane_black.png';
-  const medBox = new Image(32, 32);
-  medBox.src = 'med_box.png';
+  const airplaneWhiteImg = new Image(32, 32);
+  airplaneWhiteImg.src = 'airplane_white.png';
+  const airplaneBlackImg = new Image(32, 32);
+  airplaneBlackImg.src = 'airplane_black.png';
+  const bombImg = new Image(32, 32);
+  bombImg.src = 'bomb.png';
+  const medBoxImg = new Image(32, 32);
+  medBoxImg.src = 'med_box.png';
+  const rocketImg = new Image(32, 32);
+  rocketImg.src = 'rocket.png';
 
   const socket = eio('ws://localhost:1700', {path: '/engine.io/game'});
   // const socket = eio('wss://y-backend.com:1700', {path: '/engine.io/game'});
@@ -138,13 +144,17 @@ Clouds - Image by rawpixel.com
     }
 
     for (const powerup of gameState.powerups) {
-      if (powerup.name == 'medkit') {
-        drawImage(ctx, medBox, powerup.xPos - myX + SCREEN_MIDDLE_X, powerup.yPos - myY + SCREEN_MIDDLE_Y, powerup.radius * 1.5, powerup.radius * 1.5);
+      if (powerup.name == 'bomb') {
+        drawImage(ctx, bombImg, powerup.xPos - myX + SCREEN_MIDDLE_X, powerup.yPos - myY + SCREEN_MIDDLE_Y, powerup.radius * 1.5, powerup.radius * 1.5);
+      } else if (powerup.name == 'medkit') {
+        drawImage(ctx, medBoxImg, powerup.xPos - myX + SCREEN_MIDDLE_X, powerup.yPos - myY + SCREEN_MIDDLE_Y, powerup.radius * 1.5, powerup.radius * 1.5);
+      } else if (powerup.name == 'rocketImg') {
+        drawImage(ctx, rocketImg, powerup.xPos - myX + SCREEN_MIDDLE_X, powerup.yPos - myY + SCREEN_MIDDLE_Y, powerup.radius * 1.5, powerup.radius * 1.5);
       }
     }
 
     for (const player of gameState.players) {
-      const airplane = player.id == playerId ? airplaneBlack : airplaneWhite;
+      const airplane = player.id == playerId ? airplaneBlackImg : airplaneWhiteImg;
       const color = player.id == playerId ? 'green' : 'red';
       drawAirplane(ctx, airplane, player.xPos - myX + SCREEN_MIDDLE_X, player.yPos - myY + SCREEN_MIDDLE_Y, player.angle);
       drawText(ctx, player.xPos - myX + SCREEN_MIDDLE_X, player.yPos - myY + SCREEN_MIDDLE_Y + 30, player.name, 'center', color, font='12px Arial');
